[gd_scene load_steps=17 format=3 uid="uid://bya282xq87x01"]

[ext_resource type="Script" path="res://systems/MainMenu.gd" id="1_rue4c"]
[ext_resource type="Texture2D" uid="uid://dey5nouwjbdsw" path="res://art/menus/vgd_main_menu_background_02.png" id="2_xeos7"]
[ext_resource type="Texture2D" uid="uid://y2wwhyi37xhu" path="res://art/menus/vgd_play_02.png" id="3_f22pp"]
[ext_resource type="Texture2D" uid="uid://bc03r8wcucib8" path="res://art/menus/vgd_tutorial_02.png" id="4_r04dj"]
[ext_resource type="Texture2D" uid="uid://drgebearunhub" path="res://art/menus/vgd_quit_02.png" id="5_5131f"]
[ext_resource type="Texture2D" uid="uid://dihy7yg4lvt5j" path="res://art/buttons/left-joystick-all.png" id="6_ng23a"]
[ext_resource type="Texture2D" uid="uid://c1syxv0ln0ahs" path="res://art/buttons/right-joystick-all.png" id="7_moe2r"]
[ext_resource type="Texture2D" uid="uid://da76hwyogikox" path="res://art/buttons/left-trigger.png" id="8_t2cbp"]
[ext_resource type="Texture2D" uid="uid://dtnf7mv7fonmq" path="res://art/buttons/right-trigger.png" id="9_5t2mm"]
[ext_resource type="AudioStream" uid="uid://c1s8wy5gupix2" path="res://sound/sfx_menu-beep.wav" id="10_xu7ky"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_of7mw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lldnq"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03phr"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77yed"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwnuw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8maj"]
bg_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rue4c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xeos7")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -150.0
offset_right = 152.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Play" type="Button" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../Tutorial")
focus_neighbor_bottom = NodePath("../../Quit")
focus_next = NodePath("../Tutorial")
theme_override_styles/normal = SubResource("StyleBoxEmpty_of7mw")
theme_override_styles/hover = SubResource("StyleBoxFlat_lldnq")
icon = ExtResource("3_f22pp")
icon_alignment = 1

[node name="Tutorial" type="Button" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Play")
focus_neighbor_bottom = NodePath("../../Quit")
focus_next = NodePath("../../Quit")
focus_previous = NodePath("../Play")
theme_override_styles/normal = SubResource("StyleBoxEmpty_of7mw")
theme_override_styles/hover = SubResource("StyleBoxFlat_03phr")
icon = ExtResource("4_r04dj")
icon_alignment = 1

[node name="Quit" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../HBoxContainer/Play")
focus_neighbor_top = NodePath("../HBoxContainer/Play")
focus_neighbor_right = NodePath("../HBoxContainer/Tutorial")
focus_previous = NodePath("../HBoxContainer/Tutorial")
theme_override_styles/normal = SubResource("StyleBoxEmpty_of7mw")
theme_override_styles/hover = SubResource("StyleBoxFlat_77yed")
icon = ExtResource("5_5131f")
icon_alignment = 1

[node name="Tutorial" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkLayer" type="ColorRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.670588)

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 100.0
offset_right = 244.0
offset_bottom = 655.0
grow_horizontal = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Title" type="Label" parent="Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "How to Play:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveRow" type="HBoxContainer" parent="Tutorial/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonIcon" type="TextureRect" parent="Tutorial/VBoxContainer/MoveRow"]
layout_mode = 2
texture = ExtResource("6_ng23a")
expand_mode = 2

[node name="MoveText" type="Label" parent="Tutorial/VBoxContainer/MoveRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "- Left stick to move"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AimRow" type="HBoxContainer" parent="Tutorial/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonIcon" type="TextureRect" parent="Tutorial/VBoxContainer/AimRow"]
layout_mode = 2
texture = ExtResource("7_moe2r")
expand_mode = 2

[node name="AimText" type="Label" parent="Tutorial/VBoxContainer/AimRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "- Right stick to aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DashRow" type="HBoxContainer" parent="Tutorial/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonIcon" type="TextureRect" parent="Tutorial/VBoxContainer/DashRow"]
layout_mode = 2
texture = ExtResource("8_t2cbp")
expand_mode = 2

[node name="DashText" type="Label" parent="Tutorial/VBoxContainer/DashRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "- Left trigger to dash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShootRow" type="HBoxContainer" parent="Tutorial/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonIcon" type="TextureRect" parent="Tutorial/VBoxContainer/ShootRow"]
layout_mode = 2
texture = ExtResource("9_5t2mm")
expand_mode = 2

[node name="ShootText" type="Label" parent="Tutorial/VBoxContainer/ShootRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "- Right trigger to shoot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Tutorial"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -150.0
offset_right = 75.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_dwnuw")
theme_override_styles/hover = SubResource("StyleBoxFlat_o8maj")
icon = ExtResource("5_5131f")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_xu7ky")

[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Tutorial/Back" to="." method="_on_back_pressed"]
